# repograph

./: .editorconfig  .gitattributes  .gitignore  .release-please-manifest.json  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  deny.toml  dist-workspace.toml  plan.md  release-please-config.json  release-plz.toml  renovate.json
.claude/rules/: documentation.md  logging.md  production-grade.md  testing.md
.github/workflows/: ci.yml  release-please.yml  release-plz.yml  release.yml  security.yml  sign.yml
crates/repograph/: CHANGELOG.md  Cargo.toml
crates/repograph-core/: CHANGELOG.md  Cargo.toml
crates/repograph-core/src/: agent_artifact.rs  agent_artifact_body.md  agent_artifact_setup_body.md  agents.rs  config.rs  context.rs  doctor.rs  error.rs  git.rs  lib.rs  path.rs
crates/repograph-core/src/search/: chunk.rs  embed.rs  index.rs  mod.rs
crates/repograph-core/tests/: config_roundtrip.rs
crates/repograph/src/: main.rs  output.rs  prompt.rs  selfupdate.rs
crates/repograph/src/commands/: add.rs  completions.rs  context.rs  doctor.rs  edit.rs  find.rs  index.rs  init.rs  list.rs  mod.rs  remove.rs  status.rs  switch.rs  update.rs  workspace.rs
crates/repograph/tests/: add.rs  completions.rs  config_dir.rs  context.rs  doctor.rs  edit.rs  find.rs  index.rs  init.rs  init_artifacts.rs  list.rs  mutation_json.rs  output_contract.rs  remove.rs  semantic.rs  status.rs  switch.rs  update.rs  workspace.rs
crates/repograph/tests/common/: mod.rs
openspec/changes/agent-skills/: proposal.md
openspec/changes/agent-skills/specs/agent-skills/: spec.md
openspec/changes/agent-skills/specs/init-command/: spec.md
openspec/changes/archive/2026-05-08-registry-core/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-registry-core/specs/registry-core/: spec.md
openspec/changes/archive/2026-05-19-git-status/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-git-status/specs/git-status/: spec.md
openspec/changes/archive/2026-05-24-context-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-24-context-command/specs/context-command/: spec.md
openspec/changes/archive/2026-05-24-init-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-24-init-command/specs/init-command/: spec.md
openspec/changes/archive/2026-05-24-shell-integration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-24-shell-integration/specs/doctor-command/: spec.md
openspec/changes/archive/2026-05-24-shell-integration/specs/shell-integration/: spec.md
openspec/changes/archive/2026-05-28-agent-skills/: design.md  tasks.md
openspec/changes/archive/2026-06-15-cross-repo-search/: tasks.md
openspec/changes/archive/2026-06-15-cross-repo-search/specs/agent-skills/: spec.md
openspec/changes/archive/2026-06-15-cross-repo-search/specs/cross-repo-search/: spec.md
openspec/changes/archive/2026-06-15-cross-repo-search/specs/doctor-command/: spec.md
openspec/changes/archive/2026-06-17-registry-management-skill/specs/agent-skills/: spec.md
openspec/changes/archive/2026-06-17-registry-management-skill/specs/doctor-command/: spec.md
openspec/changes/archive/2026-06-17-registry-management-skill/specs/workspace-support/: spec.md
openspec/changes/auto-index-refresh/: design.md  proposal.md  tasks.md
openspec/changes/auto-index-refresh/specs/cross-repo-search/: spec.md
openspec/changes/cross-repo-search/: design.md  proposal.md
openspec/changes/registry-management-skill/: design.md  proposal.md  tasks.md
openspec/changes/registry-management-skill/specs/registry-core/: spec.md
openspec/changes/self-update/: design.md  proposal.md  tasks.md
openspec/changes/self-update/specs/self-update/: spec.md
openspec/changes/workspace-support/: design.md  proposal.md  tasks.md
openspec/changes/workspace-support/specs/workspace-support/: spec.md
openspec/specs/agent-skills/: spec.md
openspec/specs/context-command/: spec.md
openspec/specs/cross-repo-search/: spec.md
openspec/specs/doctor-command/: spec.md
openspec/specs/git-status/: spec.md
openspec/specs/init-command/: spec.md
openspec/specs/registry-core/: spec.md
openspec/specs/shell-integration/: spec.md
openspec/specs/workspace-support/: spec.md
