[workspace]
members = ["crates/repograph-core", "crates/repograph"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Maik Basel <maik.basel@gmx.de>"]
repository = "https://github.com/maikbasel/repograph"
homepage = "https://github.com/maikbasel/repograph"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
fs-err = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dist]
inherits = "release"
