[package]
name = "repograph-core"
version = "0.2.1"
description = "Core library for repograph: registering, grouping, and exposing local git repositories as structured context for AI agents."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

# repograph-core is a library with no binaries. cargo-dist only builds the
# `repograph` binary; this opt-out makes dist refuse the `repograph-core-v*`
# tag that release-plz pushes for the lib instead of producing an empty
# release.
[package.metadata.dist]
dist = false

[lib]
name = "repograph_core"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
fs-err = { workspace = true }
dunce = { workspace = true }
toml = "1.0"
git2 = { version = "0.21", default-features = false, features = [
    "vendored-libgit2",
    "vendored-openssl",
    "https",
    "ssh",
] }
dirs = "5"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serde_json = { workspace = true }

[lints]
workspace = true
