[package]
name = "repograph"
version = "0.1.0"
description = "CLI for registering, grouping, and exposing local git repositories as structured context for AI agents."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "repograph"
path = "src/main.rs"

[dependencies]
repograph-core = { path = "../repograph-core", version = "0.1.0" }
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
is-terminal = "0.4"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[lints]
workspace = true
